--- a/Unidad2/.settings/org.eclipse.core.resources.prefs
+++ b/Unidad2/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
+encoding//docs/Ecuaciones\ de\ segundo\ grado.txt=UTF-8
 encoding//src/pruebasString/Adivina2.java=UTF-8
+encoding//src/pruebasVariadas/Raices01.java=UTF-8
+encoding//src/pruebasVariadas/Raices02.java=UTF-8
