--- a/Unidad2/.project
+++ b/Unidad2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Unidad2</name>
+	<name>ProgUnidad2</name>
 	<comment></comment>
 	<projects>
 	</projects>
