--- a/ProgUnidad2/.settings/org.eclipse.core.resources.prefs
+++ b/ProgUnidad2/.settings/org.eclipse.core.resources.prefs
@@ -3,3 +3,4 @@ encoding//docs/Ecuaciones\ de\ segundo\ grado.txt=UTF-8
 encoding//src/pruebasString/Adivina2.java=UTF-8
 encoding//src/pruebasVariadas/Raices01.java=UTF-8
 encoding//src/pruebasVariadas/Raices02.java=UTF-8
+encoding/<project>=UTF-8
